# yonja

./: .env.example  .env.local  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_POST_REFACTORING.md  CHAINLIT-CLEANUP-SUMMARY.md  CHAT-PROFILES-IMPLEMENTATION.md  COMMAND-SYSTEM-IMPLEMENTATION.md  COMMANDS.md  DEPENDENCY_ANALYSIS.md  Dockerfile  Dockerfile.langfuse  Dockerfile.langgraph  Dockerfile.mcp.viz  FEATURE-INTEGRATION-GUIDE.md  FIXES_COMPLETE_SUMMARY.md  IMAGE-GENERATION-QUICKSTART.md  IMAGE-GENERATION-SUMMARY.md  MCP-SESSION-COMPLETE.txt  PROJECT_CONTEXT.md  QUALITY-GATE-README.md  QUICK-START.md  QUICK_FIX_SUMMARY.md  QUICK_START_FIXES.md  QUICK_START_THREE_FEATURES.md  README.md  REFACTORING_SUMMARY.md  SESSION_SUMMARY.md  SETUP-SUMMARY.md  TECHNICAL_AUDIT_REFACTORING_PLAN.md  UI_RENDERING_ISSUES.md  UNDERSTANDING_THREE_UIS.md  VERIFICATION_CHECKLIST.sh  activate.bat  activate.ps1  alem_version.toml  alim_version.toml  (+15 more)
.agent/rules/: chainlit-ui-ux.md  chainlit-upstream.md  langgraph-patterns.md
.agent/workflows/: lint_code.md  run_checks.md  run_tests.md  setup_models.md  start_services.md  stop_services.md
.github/workflows/: alim-version-bump.yml  ci.yml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 226ea5724b56_merge_branched_migrations.py  3fe49b8713dd_initial_models_users_farms_parcels_.py  4b2958026efd_merge_migration_heads.py  add_alem_personas_table.py  add_chainlit_data_layer_tables.py  add_chainlit_files_table.py  add_conversation_contexts_table.py  add_defaultopen_to_steps.py  add_farm_scenario_plans_table.py  add_fin_oidc_identity.py  fix_steps_tags_column_type.py  fix_threads_tags_column_type.py  make_chainlit_user_nullable.py  make_full_name_masked_nullable.py  rename_farm_scenario_to_conversation_contexts.py
demo-ui/: .chainlitignore  .env.example  ALEM-1-REFACTOR-SUMMARY.md  ARCHITECTURE.md  Dockerfile  JIT-PERSONA-PROVISIONING.md  README.md  alem_persona.py  alem_persona_db.py  alim_persona.py  alim_persona_db.py  app.py  chainlit.md  config.py  constants.py  data_layer.py  quick-alem-1-verification.sh  quick-alim-1-verification.sh  requirements.txt  setup.ps1  setup.sh  storage_postgres.py
demo-ui/.chainlit/: config.toml  oauth.json
demo-ui/components/: __init__.py  farm_selector.py  insights_dashboard.py  spinners.py  status.py
demo-ui/docs/: CHAINLIT-FOLDER-STRUCTURE.md  CHAINLIT-INTEGRATION-COMPLETE.md  CHAINLIT-NATIVE-ARCHITECTURE.md  CHAINLIT-STATUS-SUMMARY.md  COMMANDS.md  IMPLEMENTATION-CHECKLIST.md  PERSISTENCE-FIX.md  README.md  SPINNER-GUIDE.md  chainlit.md
demo-ui/locales/: az.json
demo-ui/public/: custom.css  custom.js  manifest.json  profile-enhancer.js  sw.js  theme.json
docs/: ARCHITECTURE.md  ARCHITECTURE_NAMING_AND_OBSERVABILITY.md  AUTO-FIX-SUMMARY.md  CHAINLIT_API_MODE_IMPLEMENTATION.md  CHAINLIT_SCHEMA_RULES.md  CLEANUP_GUIDE.md  IMPLEMENTATION_COMPLETE.md  LANGGRAPH_API_IMPLEMENTATION.md  LANGGRAPH_ARCHITECTURE_COMPARISON.md  LANGGRAPH_DEV_SERVER_FULL_ROLE_ANALYSIS.md  LANGGRAPH_DEV_SERVER_IMPLEMENTATION_GUIDE.md  LANGGRAPH_DEV_SERVER_STARTUP.md  LANGGRAPH_DOCKER_DEPLOYMENT.md  LANGGRAPH_DOCUMENTATION_INDEX.md  LANGGRAPH_EXECUTIVE_SUMMARY.md  LANGGRAPH_TESTING_GUIDE.md  LOG_AGGREGATION_GUIDE.md  MCP-IMPLEMENTATION.md  MCP-NATIVE-MODAL-INTEGRATION.md  MCP-QUICKSTART.md  PRICING-SIMPLIFIED.md  PROJECT_GOALS.md  QUALITY-GATES-QUICK.md  QUALITY-GATES.md  QUICK_REFERENCE_LOGS_SCHEMA.md  SIDECAR_ARCHITECTURE.md  STORAGE_STRATEGY.md  YONCA AI əsaslı gündəlik təsərrüfat planlayıcısı – Yonca üçün data-sız prototip.md  api_integration.md  technical-manfesto.md  yonca-fermer-tetbiqi.md
notebooks/: test.ipynb
prompts/: agro_calendar_prompts.py
scripts/: check_env_parity.py  ci_bump_alem_version.py  clear_browser_cache.ps1  clear_logs.ps1  close_task_terminals.ps1  create_chainlit_tables.sql  demo_personas.json  demo_three_features.py  dev.py  fix_chainlit_tables.sql  fix_migration_blocker.py  force_cleanup.ps1  health_check.ps1  import_model.py  migrate.py  migrate_env_prefix.py  pre-start-checks.ps1  pull_model.ps1  pull_model.sh  seed.py  seed_alem_personas.py  seed_alem_personas_db.py  seed_alim_personas.py  seed_alim_personas_db.py  seed_database.py  setup-git-hooks.ps1  setup_langgraph_checkpoint_tables.py  start.ps1  start_all.ps1  start_service.ps1  start_with_logs.ps1  stop_all.ps1  test_commands.ps1  test_language_quality.ps1  test_maverick.py  unified_log.ps1  verify_db_fix.py  verify_pydantic_prefix.py
src/alim/: config.py
tests/: conftest.py  test_umbrella.py  test_yonca.py
(+359 files in other folders)
