[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yonca"
version = "0.2.0"
description = "AI-powered daily farm recommendations for Azerbaijani farmers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "strawberry-graphql[fastapi]>=0.215.0",
    "streamlit>=1.28.0",
    "rich>=13.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
