[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "yonca"
version = "0.1.0"
description = "AI Farming Assistant for Azerbaijani Farmers"
authors = [
    {name = "Rashad Jafarov", email = "rashad.jafaroff@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "google-generativeai>=0.3.0",
    "langgraph>=0.0.50",
    "langchain-core>=0.1.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "faker>=22.0.0",
    "jinja2>=3.1.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "aiosqlite>=0.19.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry]
name = "yonca"
version = "0.1.0"
description = "AI Farming Assistant for Azerbaijani Farmers"
authors = ["Rashad Jafarov <rashad.jafaroff@gmail.com>"]
readme = "README.md"
packages = [{include = "yonca", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
google-generativeai = "^0.3.0"
langgraph = "^0.0.50"
langchain-core = "^0.1.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
redis = "^5.0.0"
faker = "^22.0.0"
jinja2 = "^3.1.0"
structlog = "^24.1.0"
prometheus-client = "^0.19.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
aiosqlite = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
